Fix 'Crash on removing diagram'.

Using pointer to widget when it is not found within the document.

CCBUG:352633
BUG:358286
FIXED-IN:2.18.2 (KDE Applications 15.12.2)